--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <header>Header content</header>
+    <section>
+        main image
+    </section>
+    <section>
+        club Ethos
+    </section>
+    <section>
+        Running locations, distance and time
+    </section>
+    <footer>
+        social links
+    </footer>
 </body>
 </html>
