--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="">
-            Love Running
+            <h1>Love Running</h1>
         </a>
         <nav>
             <ul>
