--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="visit our facebook page (Opens in a new tab)"><i class="fab fa-facebook"></i></a>
             </li>
